updated distance query and added new logo

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -230,7 +230,9 @@ anchorcolor = blue]{hyperref}
 	\subsubsection{Non-Functional Requirements}
 	\subsection{Architecture}
 	\subsection{State Management}
-	
+	Simple state management used (Provider) -
+	involves: ChangeNotifier and Provider.of
+	https://flutter.dev/docs/development/data-and-backend/state-mgmt/simple
 	
 	\section{Production}
 	\subsection{Version Control}
