Refactoring parent_barbers so that they can load asynchronously

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -309,6 +309,10 @@ anchorcolor = blue]{hyperref}
 	\subsubsection{Common Items}
 	The common items contains global variables that were accessible throughout the project. Initially this included structures and arrays that served as objects to test the functionality of the frontend, for example a barber shop class with a nested list of barbers classes, each with a name, age, description etc. As backend functionality was added these items were removed. A theme class was then added which contains dart files that can be implemented. Doing it in this way meant that the application could be easily styled, without any unnecessary refactoring of code.
 	
+	\section{Random stuff}
+	\subsection{Launcher Icons}
+	Created using GIMP. Plugin flutter\_launcher\_icons used to install icons across android and iOS
+	
 	\bibliography{bib file}
 	
 	\appendix
