--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -263,6 +263,8 @@ anchorcolor = blue]{hyperref}
 	\end{lstlisting}
 	which gives a search time of $\mathcal{O}$(1).
 	
+	When authenticating through Google, Facebook and Twitter, a user is created so that data can be persistently stored alongside the credentials.
+	
 	
 	\subsection{Sprint X - Backend Design}
 	
