--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -316,6 +316,8 @@ anchorcolor = blue]{hyperref}
 	
 	Next, we parse the data into JSON format by passing the PlaceModel object into the function 'createLocationMap', which creates a map using the location data. Finally we pass through this map to the 'addLocationDetails', which uses the given user id to update the database with the users location.
 	
+	\subsection{Sprint X - Payment}
+	
 	\subsection{Widgets and Common Items}
 	Here we discuss any items not covered within a specified sprint.
 	
