system design report section

--- a/Final Project LaTeX/Final Report/main.tex
+++ b/Final Project LaTeX/Final Report/main.tex
@@ -224,7 +224,11 @@ anchorcolor = blue]{hyperref}
 	\end{figure}
 
 	\section{System Design}
+	This section discusses the process of the ideation and creation of the system design, including the initial scope, requirements, application architecture and state management.
 	\subsection{Application Scope}
+	The scope of the project was to create a fully working and functional barber application with several features, including a booking system, an ordering system, and a delivery system that was integrated with google maps API. To further aid in scoping the project, epics were created, which were further split into stories that could be carried out. Although it could be argued that this type of agile methodology is more relevant when working within a team of developers, it helped to determine a stringent workflow and timeline and aided in project delivery.
+	The scope was further defined when wire-framing in Adobe XD, which allowed for the first tangible design to be made.
+
 	\subsection{Requirements}
 	\subsubsection{Functional Requirements}
 	\subsubsection{Non-Functional Requirements}
@@ -326,6 +330,11 @@ anchorcolor = blue]{hyperref}
 	
 	\subsubsection{Common Items}
 	The common items contains global variables that were accessible throughout the project. Initially this included structures and arrays that served as objects to test the functionality of the frontend, for example a barber shop class with a nested list of barbers classes, each with a name, age, description etc. As backend functionality was added these items were removed. A theme class was then added which contains dart files that can be implemented. Doing it in this way meant that the application could be easily styled, without any unnecessary refactoring of code.
+	
+	\section{Testing}
+	\subsection{User Testing}
+	\subsection{Acceptance Testing}
+	\cite{Humble and Farley, 2010, chapter 8}
 	
 	\section{Random stuff}
 	\subsection{Launcher Icons}
